--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <li id="markli">
                 <ul>
                     <li>首页</li>
-                    <li id="scrheight">我的作品</li>
+                    <li id="scrheight">美图秀</li>
                     <li onclick="Aboutme()">关于我</li>
                     <li onclick="newBomb()">联系方式</li>
                 </ul>
             </li>
             <li class="boxlist">首页</li>
-            <li class="boxlist">我的作品</li>
+            <li class="boxlist">美图秀</li>
             <li class="boxlist">关于我</li>
             <li class="boxlist">联系方式</li>
         </ul>
 
         <div class="box">首页</div>
-        <div class="box">我的作品</div>
+        <div class="box">美图秀</div>
         <div class="box" onclick ="" >关于我</div>
         <div class="box" onclick="newBomb()">联系方式</div>
 
@@ -171,7 +171,7 @@
     <div class="planning">
         <div>
             <a href="javascript:;" onclick="s()">首页</a>
-            <a href="javascript:;">我的作品</a>
+            <a href="javascript:;">美图秀</a>
             <a href="javascript:;">关于我</a>
             <a href="javascript:;">联系方式</a>
 
