--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                 </li>
             </ul>
         </div>
-        <div class="c_right"> <h3 class="chinode">联系方式</h3>
+        <div class="c_right"> <h3 class="chinode">作品</h3>
 
             <ul>
-                <li>手机：15821316648</li>
-                <li>QQ：1450309165</li>
-                <li>邮箱：zengqing0125@126.com</li>
+                <li><a href="snake">贪吃蛇</a></li>
+                <li><a href="meilishuo">美丽说</a></li>
+                <li><a href="jd">京东</a></li>
             </ul>
 
         </div>
