--- a/index.html
+++ b/index.html
@@ -1,291 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="index.css" rel="stylesheet" type="text/css" />
-    <!--[if IE 6]>
-    <script src="DD_belatedPNG_0.0.8a.js"></script>
-    <script>
-        DD_belatedPNG.fix("*");
-    </script>
-    <![endif]-->
-    <title>个人小站</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
-<script language="javascript" src="js/index.js" type="text/javascript"></script>
-<script language="javascript" src="js/jsonp.js" type="text/javascript"></script>
-<script language="javascript" src="js/newBome.js" type="text/javascript"></script>
-<script language="javascript" src="js/boxwork.js" type="text/javascript"></script>
 <body>
-<div id="aboutme">
-    <span class="remove"></span>
-    <p><span>姓名：</span>曾清&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>性别 : </span>女</p>
-    <p><span>年龄：</span>24岁&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>  学历 : </span>本科</p>
-    <p><span>求职意向 : </span> web前端</p>
-    <p><span>技能专长 : </span></p>
-    <p>1、熟练掌握HTML+CSS网页布局，能熟练完成各种静态页面的编写以及实现各种网页动态效果</p>
-    <p>2、熟练掌握JavaScript，DOM等，能够手写js代码，深入理解闭包，面向对象，原型链；</p>
-    <p>3、熟悉多种js框架，能够使用BootStrap实现响应式布局，使用AngularJS实现客户的MVC模式程序，使用jQuery Mobile和jQuery UI实现各种插件，支持移动设备</p>
-    
-</div>
-<div id="contactme">
-    <p>电话 ：15821316648</p>
-    <p>QQ ：1450309165</p>
-    <p>邮箱 : zengqing0125@126.com </p>
-</div>
-<div id="container">
-
-    <div id="logo"><img src="images/logo.png" /></div>
-    <div id="navtext">
-
-
-        <ul id="ul1">
-            <li id="markli">
-                <ul>
-                    <li>首页</li>
-                    <li id="scrheight">美图秀</li>
-                    <li onclick="Aboutme()">关于我</li>
-                    <li onclick="newBomb()">联系方式</li>
-                </ul>
-            </li>
-            <li class="boxlist">首页</li>
-            <li class="boxlist">美图秀</li>
-            <li class="boxlist">关于我</li>
-            <li class="boxlist">联系方式</li>
-        </ul>
-
-        <div class="box">首页</div>
-        <div class="box">美图秀</div>
-        <div class="box" onclick ="" >关于我</div>
-        <div class="box" onclick="newBomb()">联系方式</div>
-
-        <input type="text" id="Text_box" value="请输入内容" />
-        <input type="button" id="btn" class="btn" />
-        <div class="newtext" id="newtext"></div>
-    </div>
-
-    <div id="box">
-        <div id="pics">
-            <div class="list1">
-                <img src="images/1.jpg">
-                <div>
-                    <img src="images/2.jpg"/>
-                    <div>
-                        <img src="images/3.jpg"/>
-                        <div>
-                            <img src="images/4.jpg"/>
-                            <div>
-                                <img src="images/5.jpg"/>
-                                <div>
-                                    <img src="images/6.jpg"/>
-                                    <div>
-                                        <img src="images/7.jpg"/>
-                                        <div>
-                                            <img src="images/8.jpg"/>
-                                            <div>
-                                                <img src="images/9.jpg"/>
-                                                <div>
-                                                    <img src="images/10.jpg"/>
-                                                    <div>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <input type="button" id="prev" class="btnbox" />
-    <input type="button" id="next" class="btnbox" />
-
-    <div id="tions">
-
-        <p>很抱歉，此部分内容采用了CSS3技术，建议您用Chrome最新版本查看</p>
-
-    </div>
-</div>
-<div id="cancenter">
-    <div class="can_top"></div>
-    <div class="can_center">
-
-        <div class="c_left">
-            <h3 class="chinode">关于我</h3>
-            <p>本人性格稳重、为人诚恳、乐观向上、勤奋好学、兴趣广泛，能够在工作中吃苦耐劳，积极上进，培养了自己工作认真负责、团结合作、追求卓越的能力，拥有良好的适应能力。喜欢读书和旅游，信奉读万卷书和行万里书缺一不可。</p>
-        </div>
-        <div class="c_center">
-            <h3 class="chinode" style="text-indent:30px;">JS前端相关文章</h3>
-            <ul id="myworkslist">
-                <li><p><span class="flleft">web前端优化</span></p>
-                    <div class="listbox"><p><span class="flleft">web前端优化</span></p></div>
-                </li>
-                <li><p><span class="flleft">IE与火狐一些兼容问题</span></p>
-                    <div class="listbox"><p><span class="flleft">IE与火狐一些兼容问题</span></p></div>
-                </li>
-                <li><p><span class="flleft">javascript一些DOM操作</span></p>
-                    <div class="listbox"><p><span class="flleft">javascript一些DOM操作</span></p></div>
-                </li>
-                <li><p><span class="flleft">怎样成为优秀的前端工程师</span></p>
-                    <div class="listbox"><p><span class="flleft">怎样成为优秀的前端工程师</span></p></div>
-                </li>
-                <li><p><span class="flleft">web前端开发入门提高 js书籍</span></p>
-                    <div class="listbox"><p><span class="flleft">web前端开发入门提高 js书籍</span></p></div>
-                </li>
-            </ul>
-        </div>
-        <div class="c_right"> <h3 class="chinode">作品</h3>
-
-            <ul>
-                <li><a href="snake">贪吃蛇</a></li>
-                <li><a href="meilishuo">美丽说</a></li>
-                <li><a href="jd">京东</a></li>
-            </ul>
-
-        </div>
-    </div>
-    <div class="bottom_d"></div>
-    <div class="few_an" id="few_an"></div>
-</div>
-<div class="hr60"></div>
-<div id="works">
-    <ul>
-        <li><img src="images/work_3.jpg" width="140" height="94" /></li>
-        <li><img src="images/work_2.jpg" width="140" height="94" /></li>
-        <li><img src="images/work_1.jpg" width="140" height="94" /></li>
-        <li><img src="images/work_4.jpg" width="140" height="94"  /></li>
-        <li><img src="images/work_5.jpg" width="140" height="94"  /></li>
-        <li><img src="images/work_6.jpg" width="140" height="94"  /></li>
-        <li><img src="images/work_7.jpg" width="140" height="94"  /></li>
-        <li><img src="images/work_8.jpg" width="140" height="94"  /></li>
-        <li><img src="images/work_9.jpg" width="140" height="94"  /></li>
-        <li><img src="images/work_10.jpg" width="140" height="94"  /></li>
-    </ul>
-</div>
-<div class="hr60"></div>
-<div id="footer">
-    <div class="planning">
-        <div>
-            <a href="javascript:;" onclick="s()">首页</a>
-            <a href="javascript:;">美图秀</a>
-            <a href="javascript:;">关于我</a>
-            <a href="javascript:;">联系方式</a>
-
-        </div>
-        <p>网页图片由懒人图库 www.lanrentuku.com/js/ 提供</p>
-    </div>
-</div>
-<div id="mywork">
-    <span class="remove"></span>
-    <p class="left"></p>
-    <p class="right"></p>
-    <img src="images/work_3.jpg" width="100%" height="100%" id="img1" style="opacity:1;" />
-</div>
-<div id="textdiv">
-    <span class="remove"></span>
-    <div style="display:block">
-        <h1>web前端优化</h1>
-        <p>JavaScript方面</p>
-        <p>脚本尽量放在页面的底部</p>
-        <p>尽量使用外联的javascript和css文件</p>
-        <p>最小化javascript和css文件</p>
-        <p>去除重复脚本</p>
-        <p>在IE中重复脚本会导致用户加载页面的时候多了一次http请求，虽然
-            这个在firefox下面会被缓存</p>
-        <p>但是在IE和firefox下面都会花费很多时间来重复执行这些重复脚本
-            很影响性能。</p>
-        <p>使用更加智能的事件监听句柄</p>
-        <p>如果你有10个按钮在同一个div下面</p>
-        <p>请直接在这个div上面监听事件，而不要监听每个button按钮
-        </p>
-    </div>
-    <div>
-        <h1>一些Javascript的IE和Firefox兼容性问题</h1>
-        <p>以下以 IE 代替 Internet Explorer，以 MF 代替 Mozzila Firefox</p>
-        <p>1. document.form.item 问题</p>
-        <p>(1)现有问题：</p>
-        <p>现有代码中存在许多 document.formName.item("itemName") 这样的语句，不能在 MF 下运行</p>
-        <p>(2)解决方法：</p>
-        <p>改用 document.formName.elements["elementName"]</p>
-        <p>关于frame</p>
-        <p>(1)现有问题</p>
-        <p>在 IE中 可以用window.testFrame取得该frame，mf中不行</p>
-        <p>(2)解决方法</p>
-        <p>在frame的使用方面mf和ie的最主要的区别是：
-        </p>
-        <p>如果在frame标签中书写了以下属性：
-        </p>
-        <p><frame src="xx.htm" id="frameId" name="frameName" /></p>
-        <p>那么ie可以通过id或者name访问这个frame对应的window对象
-        </p>
-        <p>而mf只可以通过name来访问这个frame对应的window对象
-        </p>
-    </div>
-    <div>
-        <h1>javascript一些DOM操作</h1>
-        <p>1. js事件兼容：</p>
-
-
-        <p>function（ev）{ var oEvent=ev||window.event;}</p>
-
-        <p>2. js组织事件冒泡：</p>
-
-        <p>oEvent.cancelBubble=true;</p>
-
-        <p>3. 获取屏幕的的高度和宽度：</p>
-
-        <p>var screenWidth=window.screen.availWidth;</p>
-
-        <p>var screenHeight=window.screen.availHeight;</p>
-
-        <p>4. 可视区尺寸：</p>
-
-        <p>var viewWidth=document.documentElement.clientWidth;</p>
-
-        <p>var viewHeight=document.documentElement.clientHeight;</p>
-
-        <p>5.  获取工作区尺寸：</p>
-
-        <p>var workWidth=document.body.offsetWidth;</p>
-
-        <p>var workHeight=document.body.offsetHeight;</p>
-
-    </div>
-    <div>
-        <h1>怎样成为优秀的前端工程师</h1>
-        <p>首先，前端工程师必须得掌握HTML、CSS和JavaScript。只懂其中一个或两个还不行，你必须对这三门语言都很熟悉。也不是说必须对这三门语言都非常精通，但你至少要能够运用它们完成大多数任务，而无需地频繁地寻求别人的帮助</p>
-
-
-        <p>优秀的前端工程师应该具备快速学习能力。推动Web发展的技术并不是静止不动的，没错吧？我甚至可以说这些技术几乎每天都在变化，如果没有快速学习能力，你就跟不上Web发展的步伐。你必须不断提升自己，不断学习新技术、新模式；仅仅依靠今天的知识无法适应未来。Web的明天与今天必将有天壤之别，而你的工作就是要搞清楚如何通过自己的Web应用程序来体现这种翻天覆地的变化。</p>
-
-        <p>计算机科学这个大门类下面的许多分支在人们眼中实际上都不外乎科学。但是，我们所说的前端不是什么科学，而是艺术。艺术家不仅要掌握谋生的技术，还要懂得如何运用。对同一个问题的解决方案在这种情况适用，在另一种情况下可能就不适用。对Web应用程序的前端而言，解决同一问题的方案经常会有很多。没有哪个方案是错的，但其中确实有一些是更合适的。优秀的前端工程师应该知道在什么情况下使用哪种方案更合适，而在什么情况下应该重新选择。</p>
-
-    </div>
-    <div>
-        <h1>web前端开发入门提高 js书籍</h1>
-        <p>WEB前端研发工程师，在国内算是一个朝阳职业，这个领域没有学校的正规教育，大多数人都是靠自己自学成才。本文主要介绍一些web开发的书籍，目的是给想了解JavaScript或者是刚接触JavaScript的朋友，介绍如何通过循序渐进的看书来学习javascript。 </p>
-
-
-        <p>一. 入门级 ：就是有一定的基础(比如最常见的HTML标签及其属性、事件、方法;最常见的CSS属性;基础的JavaScript编程能力)，能够完成一些简单的WEB前端需求。 </p>
-
-        <p>推荐：《JavaScript dom 编程艺术》</p>
-
-        <p>评价：简洁，实用，详细，易懂，书不厚，相信很快就能看完。</p>
-
-        <p>二.初级开发：不要苛责代码的对错严谨，毕竟每个程序员都有这样的一个过程，就是这个级别的特征。 </p>
-
-        <p>推荐：《javascript高级程序设计》(第二版) </p>
-
-        <p>理由：这本书的作者是 Nicholas C.Zakas ,博客地址是 http://www.nczonline.net/ ,大家可以去多关注，雅虎的前端工程师，是YUI的代码贡献者，可想而知这本书得含金量，他出的书都广受好评。不要被书名的“高级”唬住，只要有JS基础语法知识和DOM基础知识就行，而且本书开始阶段还是介绍JS和DOM的语法知识。
-        </p>
-
-    </div>
-    <span class="left"></span>
-    <span class="right"></span>
-</div>
+     项目
 </body>
 </html>
