--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<title>×÷Æ·¼¯</title>
+<LINK rel=stylesheet type=text/css href="css/lrtk.css">
+<SCRIPT type=text/javascript src="js/jquery.js"></SCRIPT>
+<SCRIPT type=text/javascript charset=utf-8 src="js/lrscroll.js"></SCRIPT>
 </head>
-<body>
-     é¡¹ç›®
+
+<DIV id=featureContainer>
+<DIV id=feature>
+<DIV id=block>
+<DIV id=botton-scroll>
+<UL class=featureUL>
+  <LI class=featureBox>
+  <DIV class=box><A href="aboutme" target="_blank"><IMG alt=Paracletos  src="images/aboutme.jpg" width=240 height=150> </A></DIV>
+  <!-- /box --></LI>
+  <LI class=featureBox>
+  <DIV class=box><A href="airwar" target="_blank"><IMG alt="Natural Touch Soap" src="images/02.jpg" width=240 height=150> </A></DIV>
+  <!-- /box --></LI>
+  <LI class=featureBox>
+  <DIV class=box><A href="jd" target="_blank"><IMG alt="LRTK" src="images/jd.jpg" width=240 height=150> </A></DIV>
+  <!-- /box --></LI>
+  <LI class=featureBox>
+  <DIV class=box><A href="meilishuo" target="_blank"><IMG alt="Natalie Reid" src="images/04.jpg" width=240 height=150> </A></DIV>
+  <!-- /box --></LI>
+  <LI class=featureBox>
+  <DIV class=box><A href="QQmusic" target="_blank"><IMG alt="xixi" src="images/QQmusic.jpg" width=240 height=150> </A></DIV>
+  <!-- /box --></LI>
+  <LI class=featureBox>
+  <DIV class=box><A href="snake" target="_blank"><IMG alt="Catherine Sherwood" src="images/06.jpg" width=240 height=150> </A></DIV>
+  <!-- /box -->
+  </LI></UL></DIV><!-- /botton-scroll --></DIV><!-- /block --><A class=prev href="javascript:void();">Previous</A><A class=next 
+href="javascript:void();">Next</A> </DIV>
+<!-- /feature --></DIV><!-- /featureContainer -->
+<DIV id=wrap><SPAN id=load>LOADING...</SPAN></DIV><!-- /wrap --></DIV><!-- /featured --></DIV><!-- /body --></DIV><!-- /wrapper -->
+
+<body style="text-align:center">
+
 </body>
 </html>
