--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>作品集</title>
+<title>project</title>
 <LINK rel=stylesheet type=text/css href="css/lrtk.css">
 <SCRIPT type=text/javascript src="js/jquery.js"></SCRIPT>
 <SCRIPT type=text/javascript charset=utf-8 src="js/lrscroll.js"></SCRIPT>
